--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,3 +34,13 @@ jobs:
           path: |
             dist/app.exe
             installer/ultrasuite-setup.exe
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          files: |
+            dist/app.exe
+            installer/ultrasuite-setup.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
