--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           path: |
             dist/ultrasuite-server.exe
             dist/ultrasuite-gui.exe
-            installer/ultrasuite-setup.exe
+            dist/ultrasuite-setup.exe
 
       - name: Create release
         uses: softprops/action-gh-release@v1
@@ -43,6 +43,6 @@ jobs:
           files: |
             dist/ultrasuite-server.exe
             dist/ultrasuite-gui.exe
-            installer/ultrasuite-setup.exe
+            dist/ultrasuite-setup.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
