--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+          cache: 'pip'
+          cache-dependency-path: requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install Flask pandas matplotlib openpyxl xhtml2pdf pywebview
+          pip install -r requirements.txt pyinstaller
       - name: Build executable
         shell: powershell
         run: ./build-scripts/build_exe.ps1
